--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.1'
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     compile group: 'com.alibaba', name: 'fastjson', version: '1.2.62'
+    compile 'org.apache.commons:commons-lang3:3.8.1'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'mysql:mysql-connector-java'
