--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     compile group: 'com.alibaba', name: 'fastjson', version: '1.2.62'
     compile 'org.apache.commons:commons-lang3:3.8.1'
+    compile 'com.github.pagehelper:pagehelper-spring-boot-starter:1.2.13'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'mysql:mysql-connector-java'
